# build-pyckage

./: Cargo.toml  README.md  go.mod  main.go  make.bat  pyproject.toml  run.bat
doc/: design.md  requirement.md
load-pykg/: embed.go  embed_test.go  local.go  main.go  web.go
src/: local.rs  main.rs  web.rs
src/build_pyckage/: cli.py  config.py  core.py  dep.py  embed.py  parser.py  utils.py  zipp.py
src/build_pyckage/parser/: __init__.py  uv.py
tests/: test_dep.py  test_parser.py
