[project]
name = "build-pyckage"
version = "0.1.1"
description = "build python package"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
build-pyckage = "build_pyckage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = ["pytest>=8.3.4"]
