[project]
name = "build-pyckage"
version = "0.5.0"
description = "build python package"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["mashumaro[toml]>=3.15"]

[project.scripts]
build-pyckage = "build_pyckage.cli:main"
pyckage = "build_pyckage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.ruff]
target-version = "py312"
lint.extend-select = ["I", "UP034", "F403"]
